--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ body {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] 1fr [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] 1fr [full-end]; }
+  .container > * {
+    padding: 40px;
+    font-size: 3rem; }
 
 .sidebar {
   background-color: #c69963;
@@ -45,7 +48,9 @@ body {
   background-color: #101d2c; }
 
 .gallery {
-  background-color: #54483a; }
+  background-color: #54483a;
+  grid-column: full-start / full-end; }
 
 .footer {
-  background-color: #101d2c; }
+  background-color: #101d2c;
+  grid-column: full-start / full-end; }
