repeat(auto-fit, minmax(25rem, 1fr) for responsive layout

--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -5,7 +5,7 @@
 
 	display: grid;
 	// grid-template-columns: repeat(3, 1fr);
-	// auto-fit cols according to width, which should be min 250px || 1fr; Will make 3 cols into 2 cols <250px;
+	// auto-fit cols according to width, which should be min 250px || 1fr; Will make 3 cols into 2 cols when < 250px;
 	grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
 	grid-gap: 6rem;
 	align-items: start;
