--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -1,11 +1,18 @@
 .story {
-  &__pictures {
-    background-color: $color-primary;
-    grid-column: full-start / col-end 4;
-  }
+	&__pictures {
+		background-color: $color-primary;
+		grid-column: full-start / col-end 4;
+	}
 
-  &__content {
-    background-color: $color-grey-light-1;
-    grid-column: col-start 5 / full-end;
-  }
+	&__content {
+		background-color: $color-grey-light-1;
+		grid-column: col-start 5 / full-end;
+
+		padding: 6rem 12rem;
+	}
+
+	&__text {
+		font-size: 1.5rem;
+		font-style: italic;
+	}
 }
