--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -1,4 +1,5 @@
 .story {
+
 	&__pictures {
 		background-color: $color-primary;
 		grid-column: full-start / col-end 4;
@@ -8,7 +9,20 @@
 		background-color: $color-grey-light-1;
 		grid-column: col-start 5 / full-end;
 
-		padding: 6rem 12rem;
+		padding: 6rem 8vw;
+
+		// Flexbox solution to align items
+		/* 
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: flex-start;
+		*/
+
+		// CSS grid solution to align items
+		display: grid;
+		align-content: center;
+		justify-items: start;
 	}
 
 	&__text {
