--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -1,11 +1,11 @@
 .story {
-
 	&__pictures {
 		background-color: $color-primary;
 		grid-column: full-start / col-end 4;
 		// as styling is compiled in style.css in css folder, move up to nexter dir with ../ and into /img
-		background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../img/back.jpg); 
-	
+		background-image: linear-gradient(rgba($color-primary, 0.5), rgba($color-primary, 0.5)),
+			url(../img/back.jpg);
+
 		display: grid;
 		grid-template-rows: repeat(6, 1fr);
 		grid-template-columns: repeat(6, 1fr);
@@ -16,9 +16,8 @@
 		width: 100%;
 		grid-row: 2 / 6;
 		grid-column: 2 / 6;
-		box-shadow: 0 2rem 5rem rgba(#000, .1);
-
-	}	
+		box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+	}
 
 	&__img--2 {
 		width: 100%;
@@ -26,8 +25,8 @@
 		grid-column: 4 / 7;
 		width: 115%;
 		z-index: 20;
-		box-shadow: 0 2rem 5rem rgba(#000, .1);
-	}	
+		box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+	}
 
 	&__content {
 		background-color: $color-grey-light-1;
