--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -32,8 +32,12 @@
 	@extend %heading;
 	font-size: 1.9rem;
 
-	&--light { color: $color-grey-light-1; }
-	&--dark { color: $color-grey-dark-1; }
+	&--light {
+		color: $color-grey-light-1;
+	}
+	&--dark {
+		color: $color-grey-dark-1;
+	}
 }
 
 .btn {
@@ -54,7 +58,15 @@
 }
 
 // Helper classes - Check out atomic css - they're trending!
-.mb-sm { margin-bottom: 2rem; }
-.mb-md { margin-bottom: 3rem; }
-.mb-lg { margin-bottom: 4rem; }
-.mb-hg { margin-bottom: 8rem; }
+.mb-sm {
+	margin-bottom: 2rem;
+}
+.mb-md {
+	margin-bottom: 3rem;
+}
+.mb-lg {
+	margin-bottom: 4rem;
+}
+.mb-hg {
+	margin-bottom: 8rem;
+}
