--- a/css/style.css
+++ b/css/style.css
@@ -205,8 +205,15 @@ body {
     grid-column: 1 / -1; }
 
 .gallery {
-  background-color: #54483a;
-  grid-column: full-start / full-end; }
+  background-color: #f9f7f6;
+  grid-column: full-start / full-end;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(7, 5vw);
+  grid-gap: 1.5rem;
+  padding: 1.5rem; }
+  .gallery > * {
+    width: 100%; }
 
 .footer {
   background-color: #101d2c;
