--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -8,7 +8,17 @@
   grid-gap: 1.5rem;
   padding: 1.5rem;
 
-  & > * { // Select all direct children elements
+  &__item {
+    &--1 {
+      grid-row: 1 / span 2;
+      grid-column: 1 / span 2;
+    }
+  }
+
+  &__img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block; // To avoid the whitespace after the image. Without it, it's treated like an inline element, similar to text. 
   }
 }
