--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,9 @@ body {
   .gallery__item--1 {
     grid-row: 1 / span 2;
     grid-column: 1 / span 2; }
+  .gallery__item--2 {
+    grid-row: 1 / span 3;
+    grid-column: 3 / span 3; }
   .gallery__img {
     width: 100%;
     height: 100%;
