--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -9,9 +9,15 @@
   padding: 1.5rem;
 
   &__item {
+
     &--1 {
       grid-row: 1 / span 2;
       grid-column: 1 / span 2;
+    }
+
+    &--2 {
+      grid-row: 1 / span 3;
+      grid-column: 3 / span 3;
     }
   }
 
