--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -19,6 +19,16 @@
       grid-row: 1 / span 3;
       grid-column: 3 / span 3;
     }
+
+    &--3 {
+      grid-row: 1 / span 2;
+      grid-column: 6 / span 1;
+    }
+
+    &--4 {
+      grid-row: 1 / span 2;
+      grid-column: 7 / span 2;
+    }
   }
 
   &__img {
