--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -44,6 +44,11 @@
       grid-row: 4 / span 1;
       grid-column: 5 / span 1;
     }
+
+    &--8 {
+      grid-row: 3 / span 2;
+      grid-column: 6 / span 2;
+    }
   }
 
   &__img {
