--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
   border-radius: 0;
   font-family: "Josefin Sans", sans-serif;
   font-size: 1.5rem;
-  transform: uppercase;
+  text-transform: uppercase;
   padding: 1.8rem 3rem;
   cursor: pointer;
   transition: all 0.2s; }
@@ -106,9 +106,20 @@ body {
   grid-column: full-start / col-end 6;
   background-image: linear-gradient(rgba(16, 29, 44, 0.93), rgba(16, 29, 44, 0.93)), url(../img/hero.jpeg);
   background-size: cover;
-  background-position: center; }
+  background-position: center;
+  padding: 8rem;
+  padding-top: 4rem;
+  display: grid;
+  grid-template-rows: 1fr min-content 6rem 1fr;
+  grid-template-columns: max-content;
+  grid-row-gap: 1.5rem;
+  justify-content: center; }
   .header__logo {
-    height: 3rem; }
+    height: 3rem;
+    justify-self: center; }
+  .header__btn {
+    align-self: start;
+    justify-self: start; }
   .header__seenon-logos img {
     height: 2.5rem; }
 
