--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -51,7 +51,7 @@
 	border-radius: 0;
 	font-family: $font-display;
 	font-size: 1.5rem;
-	transform: uppercase;
+	text-transform: uppercase;
 	padding: 1.8rem 3rem;
 	cursor: pointer;
 	transition: all 0.2s;
