--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,13 @@ body {
 .realtors {
   background-color: #101d2c;
   grid-column: col-start 7 / full-end; }
+  .realtors__list {
+    display: grid;
+    grid-template-columns: min-content max-content; }
+  .realtors__img {
+    width: 7rem;
+    border-radius: 50%;
+    display: block; }
 
 .features {
   grid-column: center-start / center-end;
