--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -1,4 +1,20 @@
 .realtors {
 	background-color: $color-secondary;
 	grid-column: col-start 7 / full-end;
+
+	&__list {
+		display: grid;
+		grid-template-columns: min-content max-content;
+	}
+
+	&__img {
+		width: 7rem;
+		border-radius: 50%;
+		display: block;
+	}
+
+	&__sold {
+
+	}
+
 }
