--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -6,6 +6,11 @@
 	display: flex;
 	justify-content: center;
 
+	@media only screen and (max-width: $bp-large) {
+		grid-column: 1 / -1;
+		grid-row: 1 / 2;
+	}
+
 }
 
 .nav-btn {
