--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,9 @@ body {
   @media only screen and (max-width: 62.5em) {
     .sidebar {
       grid-column: 1 / -1;
-      grid-row: 1 / 2; } }
+      grid-row: 1 / 2;
+      justify-content: flex-end;
+      align-items: center; } }
 
 .nav-btn {
   border: none;
@@ -111,6 +113,14 @@ body {
     transform: translateY(-1.5rem); }
   .nav-btn::after {
     transform: translateY(1.3rem); }
+  @media only screen and (max-width: 62.5em) {
+    .nav-btn {
+      margin-top: 0;
+      margin-right: 3rem; }
+      .nav-btn::before {
+        transform: translateY(-1.2rem); }
+      .nav-btn::after {
+        transform: translateY(1rem); } }
 
 .header {
   background-color: #54483a;
