--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -3,13 +3,20 @@
 		background-color: $color-primary;
 		grid-column: full-start / col-end 4;
 		// as styling is compiled in style.css in css folder, move up to nexter dir with ../ and into /img
-		background-image: linear-gradient(rgba($color-primary, 0.5), rgba($color-primary, 0.5)),
-			url(../img/back.jpg);
+		background-image: linear-gradient(rgba($color-primary, 0.5), rgba($color-primary, 0.5)), url(../img/back.jpg);
+		background-size: cover;
+		
 
 		display: grid;
 		grid-template-rows: repeat(6, 1fr);
 		grid-template-columns: repeat(6, 1fr);
 		align-items: center;
+
+		@media only screen and (max-width: $bp-medium) {
+			grid-column: 1 / -1;	
+			padding: 6rem;
+		}
+
 	}
 
 	&__img--1 {
@@ -17,15 +24,25 @@
 		grid-row: 2 / 6;
 		grid-column: 2 / 6;
 		box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+
+		@media only screen and (max-width: $bp-medium) {
+			grid-column: 1 / 5;	
+			grid-row: 1 / -1;
+		}
 	}
 
 	&__img--2 {
-		width: 100%;
+		width: 115%;
 		grid-row: 4 / 6;
 		grid-column: 4 / 7;
 		width: 115%;
 		z-index: 20;
 		box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+
+		@media only screen and (max-width: $bp-medium) {
+			grid-row: 1 / -1;
+			width: 100%;
+		}
 	}
 
 	&__content {
@@ -46,6 +63,11 @@
 		display: grid;
 		align-content: center;
 		justify-items: start;
+
+		@media only screen and (max-width: $bp-medium) {
+			grid-column: 1 / -1;	
+			grid-row: 5 / 6;
+		}
 	}
 
 	&__text {
