--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -3,15 +3,29 @@
 
 	margin: 15rem 0;
 
-	display: grid;
-	// grid-template-columns: repeat(3, 1fr);
-	// auto-fit cols according to width, which should be min 250px || 1fr; Will make 3 cols into 2 cols when < 250px;
-	grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-	grid-gap: 6rem;
-	align-items: start;
+	@supports(display: grid) {
+		display: grid;
+		// grid-template-columns: repeat(3, 1fr);
+		// auto-fit cols according to width, which should be min 250px || 1fr; Will make 3 cols into 2 cols when < 250px;
+		grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+		grid-gap: 6rem;
+		align-items: start;
+	}
 }
 
 .feature {
+
+	float: left;
+	width: 33.333%;
+	margin-bottom: 6rem;
+
+	@supports(display: grid) {
+		// Get rid of the width and margin-bottom from the float above and then display: grid magic can happen.
+		width: auto;
+		margin-bottom: 0;
+	}
+
+
 	display: grid;
 	grid-template-columns: min-content 1fr;
 	grid-row-gap: 1.5rem;
@@ -29,3 +43,6 @@
 		font-size: 1.7rem;
 	}
 }
+
+
+// @supports (display: grid) is progressive enhancement. We can style a website with floats to be compatible with old browsers and 'enhance' if they have CSS grid.
