--- a/sass/main.css
+++ b/sass/main.css
@@ -4,12 +4,12 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 html {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-size: 62.5%;
 }
 
@@ -29,36 +29,60 @@ body {
 .container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 80vh min-content 40vw (min-content)[3];
-      grid-template-rows: 80vh -webkit-min-content 40vw repeat(3, -webkit-min-content);
-      grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
-  -ms-grid-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] ([col-start] minmax(min-content, 14rem) [col-end])[8] [center-end] minmax(6rem, 1fr) [full-end];
-      grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(-webkit-min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
-      grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+  -ms-grid-rows: 80vh min-content 40vw (min-content) [3];
+  grid-template-rows: 80vh -webkit-min-content 40vw repeat(3, -webkit-min-content);
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  -ms-grid-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start]
+    ([col-start] minmax(min-content, 14rem) [col-end]) [8] [center-end] minmax(6rem, 1fr) [full-end];
+  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(
+      8,
+      [col-start] minmax(-webkit-min-content, 14rem) [col-end]
+    ) [center-end] minmax(6rem, 1fr) [full-end];
+  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(
+      8,
+      [col-start] minmax(min-content, 14rem) [col-end]
+    ) [center-end] minmax(6rem, 1fr) [full-end];
 }
 
 @media only screen and (max-width: 62.5em) {
   .container {
-    -ms-grid-rows: 6rem 80vh min-content 40vw (min-content)[3];
-        grid-template-rows: 6rem 80vh -webkit-min-content 40vw repeat(3, -webkit-min-content);
-        grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
-    -ms-grid-columns: [full-start] minmax(6rem, 1fr) [center-start] ([col-start] minmax(min-content, 14rem) [col-end])[8] [center-end] minmax(6rem, 1fr) [full-end];
-        grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(-webkit-min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
-        grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+    -ms-grid-rows: 6rem 80vh min-content 40vw (min-content) [3];
+    grid-template-rows: 6rem 80vh -webkit-min-content 40vw repeat(3, -webkit-min-content);
+    grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+    -ms-grid-columns: [full-start] minmax(6rem, 1fr) [center-start] ([col-start] minmax(min-content, 14rem) [col-end])
+      [8] [center-end] minmax(6rem, 1fr) [full-end];
+    grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(
+        8,
+        [col-start] minmax(-webkit-min-content, 14rem) [col-end]
+      ) [center-end] minmax(6rem, 1fr) [full-end];
+    grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(
+        8,
+        [col-start] minmax(min-content, 14rem) [col-end]
+      ) [center-end] minmax(6rem, 1fr) [full-end];
   }
 }
 
 @media only screen and (max-width: 50em) {
   .container {
     -ms-grid-rows: 6rem calc(100vh - 6rem);
-        grid-template-rows: 6rem calc(100vh - 6rem);
-    -ms-grid-columns: [full-start] minmax(6rem, 1fr) [center-start] ([col-start] minmax(min-content, 14rem) [col-end])[8] [center-end] minmax(6rem, 1fr) [full-end];
-        grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(-webkit-min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
-        grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+    grid-template-rows: 6rem calc(100vh - 6rem);
+    -ms-grid-columns: [full-start] minmax(6rem, 1fr) [center-start] ([col-start] minmax(min-content, 14rem) [col-end])
+      [8] [center-end] minmax(6rem, 1fr) [full-end];
+    grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(
+        8,
+        [col-start] minmax(-webkit-min-content, 14rem) [col-end]
+      ) [center-end] minmax(6rem, 1fr) [full-end];
+    grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(
+        8,
+        [col-start] minmax(min-content, 14rem) [col-end]
+      ) [center-end] minmax(6rem, 1fr) [full-end];
   }
 }
 
-.heading-1, .heading-2, .heading-3, .heading-4 {
+.heading-1,
+.heading-2,
+.heading-3,
+.heading-4 {
   font-family: "Josefin Sans", sans-serif;
   font-weight: 400;
 }
@@ -143,8 +167,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 @media only screen and (max-width: 62.5em) {
@@ -154,11 +178,11 @@ body {
     -ms-grid-row-span: 1;
     grid-row: 1 / 2;
     -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 }
 
@@ -171,7 +195,8 @@ body {
   margin-top: 4rem;
 }
 
-.nav-btn::before, .nav-btn::after {
+.nav-btn::before,
+.nav-btn::after {
   background-color: #fff;
   height: 2px;
   width: 4.5rem;
@@ -181,12 +206,12 @@ body {
 
 .nav-btn::before {
   -webkit-transform: translateY(-1.5rem);
-          transform: translateY(-1.5rem);
+  transform: translateY(-1.5rem);
 }
 
 .nav-btn::after {
   -webkit-transform: translateY(1.3rem);
-          transform: translateY(1.3rem);
+  transform: translateY(1.3rem);
 }
 
 @media only screen and (max-width: 62.5em) {
@@ -196,18 +221,25 @@ body {
   }
   .nav-btn::before {
     -webkit-transform: translateY(-1.2rem);
-            transform: translateY(-1.2rem);
+    transform: translateY(-1.2rem);
   }
   .nav-btn::after {
     -webkit-transform: translateY(1rem);
-            transform: translateY(1rem);
+    transform: translateY(1rem);
   }
 }
 
 .header {
   background-color: #54483a;
   grid-column: full-start / col-end 6;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(16, 29, 44, 0.93)), to(rgba(16, 29, 44, 0.93))), url(../img/hero.jpeg);
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(16, 29, 44, 0.93)),
+      to(rgba(16, 29, 44, 0.93))
+    ),
+    url(../img/hero.jpeg);
   background-image: linear-gradient(rgba(16, 29, 44, 0.93), rgba(16, 29, 44, 0.93)), url(../img/hero.jpeg);
   background-size: cover;
   background-position: center;
@@ -216,15 +248,15 @@ body {
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 1fr min-content minmax(6rem, min-content) 1fr;
-      grid-template-rows: 1fr -webkit-min-content minmax(6rem, -webkit-min-content) 1fr;
-      grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+  grid-template-rows: 1fr -webkit-min-content minmax(6rem, -webkit-min-content) 1fr;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
   -ms-grid-columns: minmax(min-content, max-content);
-      grid-template-columns: minmax(-webkit-min-content, -webkit-max-content);
-      grid-template-columns: minmax(min-content, max-content);
+  grid-template-columns: minmax(-webkit-min-content, -webkit-max-content);
+  grid-template-columns: minmax(min-content, max-content);
   grid-row-gap: 1.5rem;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 @media only screen and (max-width: 50em) {
@@ -242,32 +274,33 @@ body {
 .header__logo {
   height: 3rem;
   -ms-grid-column-align: center;
-      justify-self: center;
+  justify-self: center;
 }
 
 .header__btn {
   -ms-flex-item-align: start;
-      -ms-grid-row-align: start;
-      align-self: start;
+  -ms-grid-row-align: start;
+  align-self: start;
   -ms-grid-column-align: start;
-      justify-self: start;
+  justify-self: start;
 }
 
 .header__seenon-text {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr max-content 1fr;
-      grid-template-columns: 1fr -webkit-max-content 1fr;
-      grid-template-columns: 1fr max-content 1fr;
+  grid-template-columns: 1fr -webkit-max-content 1fr;
+  grid-template-columns: 1fr max-content 1fr;
   grid-column-gap: 1.5rem;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   font-size: 1.6rem;
   color: #aaa;
 }
 
-.header__seenon-text::before, .header__seenon-text::after {
+.header__seenon-text::before,
+.header__seenon-text::after {
   content: "";
   height: 1px;
   display: block;
@@ -277,20 +310,20 @@ body {
 .header__seenon-logos {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
+  -ms-grid-columns: (1fr) [4];
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 3rem;
   justify-items: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .header__seenon-logos img {
   max-height: 2.5rem;
   max-width: 100%;
   -webkit-filter: brightness(70%);
-          filter: brightness(70%);
+  filter: brightness(70%);
 }
 
 .realtors {
@@ -300,10 +333,10 @@ body {
   display: -ms-grid;
   display: grid;
   -ms-flex-line-pack: center;
-      align-content: center;
+  align-content: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   justify-items: center;
   grid-row-gap: 2rem;
 }
@@ -318,28 +351,28 @@ body {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: min-content max-content;
-      grid-template-columns: -webkit-min-content -webkit-max-content;
-      grid-template-columns: min-content max-content;
+  grid-template-columns: -webkit-min-content -webkit-max-content;
+  grid-template-columns: min-content max-content;
   grid-column-gap: 2rem;
   grid-row-gap: 5vh;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 @media only screen and (max-width: 50em) {
   .realtors__list {
-    -ms-grid-columns: (min-content max-content)[3];
-        grid-template-columns: repeat(3, -webkit-min-content -webkit-max-content);
-        grid-template-columns: repeat(3, min-content max-content);
+    -ms-grid-columns: (min-content max-content) [3];
+    grid-template-columns: repeat(3, -webkit-min-content -webkit-max-content);
+    grid-template-columns: repeat(3, min-content max-content);
   }
 }
 
 @media only screen and (max-width: 37.5em) {
   .realtors__list {
     -ms-grid-columns: min-content max-content;
-        grid-template-columns: -webkit-min-content -webkit-max-content;
-        grid-template-columns: min-content max-content;
+    grid-template-columns: -webkit-min-content -webkit-max-content;
+    grid-template-columns: min-content max-content;
   }
 }
 
@@ -364,12 +397,12 @@ body {
   .features {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (minmax(25rem, 1fr))[auto-fit];
-        grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    -ms-grid-columns: (minmax(25rem, 1fr)) [auto-fit];
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     grid-gap: 6rem;
     -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
+    -ms-flex-align: start;
+    align-items: start;
   }
 }
 
@@ -380,8 +413,8 @@ body {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: min-content 1fr;
-      grid-template-columns: -webkit-min-content 1fr;
-      grid-template-columns: min-content 1fr;
+  grid-template-columns: -webkit-min-content 1fr;
+  grid-template-columns: min-content 1fr;
   grid-row-gap: 1.5rem;
   grid-column-gap: 2.5rem;
 }
@@ -401,7 +434,7 @@ body {
   -ms-grid-row-span: 2;
   grid-row: 1 / span 2;
   -webkit-transform: translateY(-1rem);
-          transform: translateY(-1rem);
+  transform: translateY(-1rem);
 }
 
 .feature__text {
@@ -411,18 +444,25 @@ body {
 .story__pictures {
   background-color: #c69963;
   grid-column: full-start / col-end 4;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(198, 153, 99, 0.5)), to(rgba(198, 153, 99, 0.5))), url(../img/back.jpg);
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(198, 153, 99, 0.5)),
+      to(rgba(198, 153, 99, 0.5))
+    ),
+    url(../img/back.jpg);
   background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(../img/back.jpg);
   background-size: cover;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: (1fr)[6];
-      grid-template-rows: repeat(6, 1fr);
-  -ms-grid-columns: (1fr)[6];
-      grid-template-columns: repeat(6, 1fr);
+  -ms-grid-rows: (1fr) [6];
+  grid-template-rows: repeat(6, 1fr);
+  -ms-grid-columns: (1fr) [6];
+  grid-template-columns: repeat(6, 1fr);
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 @media only screen and (max-width: 50em) {
@@ -441,7 +481,7 @@ body {
   -ms-grid-column-span: 4;
   grid-column: 2 / 6;
   -webkit-box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
-          box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
 }
 
 @media only screen and (max-width: 50em) {
@@ -464,7 +504,7 @@ body {
   width: 115%;
   z-index: 20;
   -webkit-box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
-          box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
 }
 
 @media only screen and (max-width: 50em) {
@@ -478,7 +518,7 @@ body {
   background-color: #f9f7f6;
   grid-column: col-start 5 / full-end;
   padding: 6rem 8vw;
-  /* 
+  /*
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -487,7 +527,7 @@ body {
   display: -ms-grid;
   display: grid;
   -ms-flex-line-pack: center;
-      align-content: center;
+  align-content: center;
   justify-items: start;
 }
 
@@ -511,8 +551,8 @@ body {
   margin: 15rem 0;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(25rem, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  -ms-grid-columns: (minmax(25rem, 1fr)) [auto-fit];
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-gap: 7rem;
 }
 
@@ -520,8 +560,8 @@ body {
   background-color: #f9f7f6;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  -ms-grid-columns: (1fr) [2];
+  grid-template-columns: repeat(2, 1fr);
   grid-row-gap: 3.5rem;
 }
 
@@ -546,7 +586,7 @@ body {
   width: 2.5rem;
   z-index: 2;
   -ms-grid-column-align: end;
-      justify-self: end;
+  justify-self: end;
   margin: 1rem;
 }
 
@@ -556,10 +596,10 @@ body {
   grid-row: 1 / 2;
   grid-column: 1 / -1;
   -ms-grid-column-align: center;
-      justify-self: center;
+  justify-self: center;
   -ms-flex-item-align: end;
-      -ms-grid-row-align: end;
-      align-self: end;
+  -ms-grid-row-align: end;
+  align-self: end;
   z-index: 3;
   width: 80%;
   font-family: "Josefin Sans", sans-serif;
@@ -570,25 +610,32 @@ body {
   color: #fff;
   font-weight: 400;
   -webkit-transform: translateY(50%);
-          transform: translateY(50%);
+  transform: translateY(50%);
 }
 
-.home__location, .home__rooms {
+.home__location,
+.home__rooms {
   margin-top: 2.5rem;
 }
 
-.home__location, .home__rooms, .home__area, .home__price {
+.home__location,
+.home__rooms,
+.home__area,
+.home__price {
   font-size: 1.5rem;
   margin-left: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
-.home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
+.home__location svg,
+.home__rooms svg,
+.home__area svg,
+.home__price svg {
   fill: #c69963;
   height: 2rem;
   width: 2rem;
@@ -604,10 +651,10 @@ body {
   grid-column: full-start / full-end;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[8];
-      grid-template-columns: repeat(8, 1fr);
-  -ms-grid-rows: (5vw)[7];
-      grid-template-rows: repeat(7, 5vw);
+  -ms-grid-columns: (1fr) [8];
+  grid-template-columns: repeat(8, 1fr);
+  -ms-grid-rows: (5vw) [7];
+  grid-template-rows: repeat(7, 5vw);
   grid-gap: 1.5rem;
   padding: 1.5rem;
 }
@@ -742,7 +789,7 @@ body {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   display: block;
 }
 
@@ -756,15 +803,16 @@ body {
   list-style: none;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(15rem, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  -ms-grid-columns: (minmax(15rem, 1fr)) [auto-fit];
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   grid-gap: 2rem;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
-.nav__link:link, .nav__link:visited {
+.nav__link:link,
+.nav__link:visited {
   font-size: 1.4rem;
   color: #fff;
   text-decoration: none;
@@ -773,14 +821,15 @@ body {
   text-align: center;
   padding: 1.5rem;
   display: block;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
-.nav__link:hover, .nav__link:active {
+.nav__link:hover,
+.nav__link:active {
   background-color: rgba(255, 255, 255, 0.05);
   -webkit-transform: translateY(-3px);
-          transform: translateY(-3px);
+  transform: translateY(-3px);
 }
 
 .copyright {
@@ -796,9 +845,10 @@ body {
   display: inline-block;
 }
 
-.copyright__link:hover, .copyright__link:active {
+.copyright__link:hover,
+.copyright__link:active {
   background-color: rgba(255, 255, 255, 0.05);
   -webkit-transform: translateY(-3px);
-          transform: translateY(-3px);
+  transform: translateY(-3px);
 }
 /*# sourceMappingURL=main.css.map */
