--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,6 +1,6 @@
 // COLOR VARIABLES
-$color-primary: #c69963;
-$color-primary-dark: #b28451;
+$color-primary: #2f95d4;
+$color-primary-dark: #1881d2;
 
 $color-secondary: #101d2c;
 
