--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,52 +1,53 @@
 .footer {
-	background-color: $color-secondary;
-	grid-column: full-start / full-end;
-	padding: 8rem;
+  background-color: $color-secondary;
+  grid-column: full-start / full-end;
+  padding: 8rem;
 }
 
 .nav {
-	list-style: none;
+  list-style: none;
 
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-	grid-gap: 2rem;
-	align-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-gap: 2rem;
+  align-items: center;
 
-	&__link:link,
-	&__link:visited {
-		font-size: 1.4rem;
-		color: #fff;
-		text-decoration: none;
-		font-family: $font-display;
-		text-transform: uppercase;
-		text-align: center;
-		padding: 1.5rem;
-		display: block;
-		transition: all .2s;
-	}
+  &__link:link,
+  &__link:visited {
+    font-size: 1.4rem;
+    color: #fff;
+    text-decoration: none;
+    font-family: $font-display;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 1.5rem;
+    display: block;
+    transition: all 0.2s;
+  }
 
-	&__link:hover,
-	&__link:active {
-		background-color: rgba(#fff, .05);
-		transform: translateY(-3px);
-	}
+  &__link:hover,
+  &__link:active {
+    background-color: rgba(#fff, 0.05);
+    transform: translateY(-3px);
+  }
 }
 
 .copyright {
-	font-size: 1.4rem;
-	color: $color-grey-light-2;
-	margin-top: 6rem;
-	text-align: center;
-	
-	&__link {
-		color: $color-grey-light-1;
-		text-decoration: none;
-		display: inline-block;
-	}
+  font-size: 1.4rem;
+  color: $color-grey-light-2;
+  margin-top: 6rem;
+  text-align: center;
 
-	&__link:hover,
-	&__link:active {
-		background-color: rgba(#fff, .05);
-		transform: translateY(-3px);
-	}
+  &__link {
+    color: $color-grey-light-1;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.4rem;
+  }
+
+  &__link:hover,
+  &__link:active {
+    background-color: rgba(#fff, 0.05);
+    transform: translateY(-3px);
+  }
 }
