--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
 
 a {
   text-decoration: none !important;
-  color: darkgoldenrod;
+  color: #2f95d4;
   font-size: 16px; }
 
 .container {
