--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -18,6 +18,11 @@ body {
   font-weight: 300;
   line-height: 1.6; }
 
+a {
+  text-decoration: none !important;
+  color: #2f95d4;
+  font-size: 16px; }
+
 .container {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
@@ -51,7 +56,7 @@ body {
 
 .heading-3 {
   font-size: 1.6rem;
-  color: #c69963;
+  color: #2f95d4;
   text-transform: uppercase; }
 
 .heading-4 {
@@ -62,7 +67,7 @@ body {
     color: #54483a; }
 
 .btn {
-  background-color: #c69963;
+  background-color: #2f95d4;
   color: #fff;
   border: none;
   border-radius: 0;
@@ -71,9 +76,10 @@ body {
   text-transform: uppercase;
   padding: 1.8rem 3rem;
   cursor: pointer;
-  transition: all 0.2s; }
+  transition: all 0.2s;
+  text-align: center; }
   .btn:hover {
-    background-color: #b28451; }
+    background-color: #1881d2; }
 
 .mb-sm {
   margin-bottom: 2rem; }
@@ -87,8 +93,19 @@ body {
 .mb-hg {
   margin-bottom: 8rem; }
 
+@keyframes typing {
+  from {
+    width: 0; }
+  to {
+    width: 100%; } }
+
+.typed {
+  overflow: hidden;
+  /* Ensures the content is not revealed until the animation */
+  animation: typing 5.5s steps(50, end) infinite; }
+
 .sidebar {
-  background-color: #c69963;
+  background-color: #2f95d4;
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1;
   display: flex;
@@ -146,7 +163,7 @@ body {
     .header {
       padding: 5rem; } }
   .header__logo {
-    height: 3rem;
+    height: 10rem;
     justify-self: center; }
   .header__btn {
     align-self: start;
@@ -230,7 +247,7 @@ body {
       width: auto;
       margin-bottom: 0; } }
   .feature__icon {
-    fill: #c69963;
+    fill: #2f95d4;
     width: 4.5rem;
     height: 4.5rem;
     grid-row: 1 / span 2;
@@ -239,9 +256,9 @@ body {
     font-size: 1.7rem; }
 
 .story__pictures {
-  background-color: #c69963;
+  background-color: #2f95d4;
   grid-column: full-start / col-end 4;
-  background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(../img/back.jpg);
+  background-image: linear-gradient(rgba(47, 149, 212, 0.5), rgba(47, 149, 212, 0.5)), url(../img/back.jpg);
   background-size: cover;
   display: grid;
   grid-template-rows: repeat(6, 1fr);
@@ -317,7 +334,7 @@ body {
   .home__like {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
-    fill: #c69963;
+    fill: #2f95d4;
     height: 2.5rem;
     width: 2.5rem;
     z-index: 2;
@@ -346,7 +363,7 @@ body {
     display: flex;
     align-items: center; }
     .home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
-      fill: #c69963;
+      fill: #2f95d4;
       height: 2rem;
       width: 2rem;
       margin-right: 1rem; }
@@ -429,7 +446,7 @@ body {
     text-align: center;
     padding: 1.5rem;
     display: block;
-    transition: all .2s; }
+    transition: all 0.2s; }
   .nav__link:hover, .nav__link:active {
     background-color: rgba(255, 255, 255, 0.05);
     transform: translateY(-3px); }
@@ -442,7 +459,8 @@ body {
   .copyright__link {
     color: #f9f7f6;
     text-decoration: none;
-    display: inline-block; }
+    display: inline-block;
+    font-size: 1.4rem; }
   .copyright__link:hover, .copyright__link:active {
     background-color: rgba(255, 255, 255, 0.05);
     transform: translateY(-3px); }
