--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -86,5 +86,5 @@
 
 .typed {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  animation: typing 5.5s steps(50, end) infinite;
+  animation: typing 5.5s steps(50, end);
 }
